manifests/supermario/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supermario
spec:
  selector:
    app: supermario
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
