manifests/supermario/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supermario
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - mario.sith.network
  rules:
    - host: mario.sith.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: supermario
                port:
                  number: 80
